--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,11 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
 /****************** Base Header - Footer Styles *****************/
 
 header,
@@ -110,27 +115,36 @@ footer {
 
 /* Header Styles */
 
+header {
+  padding: 15px 0;
+}
+
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
 }
 
 .header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
 }
 
 header nav ul li {
@@ -139,7 +153,21 @@ header nav ul li {
 
 /* Footer Styles */
 
-.contact {
+footer {
+  flex-direction: column;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .contact {
+  margin-bottom: 50px;
   text-align: center;
 }
 
@@ -162,8 +190,8 @@ footer .social-icons p {
   align-items: center;
 }
 
-.copyright {
-  width: 100%;
+footer .copyright {
+  margin: 20px 0;
   text-align: center;
 }
 
@@ -171,13 +199,15 @@ footer .social-icons p {
 
 /****************** Mobile Styles - Homepage *****************/
 
+/* Hero Area */
+
 .hero-area {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
   flex-flow: row wrap;
 }
 
+/* Aside */
 
 aside {
   display: flex;
@@ -187,18 +217,31 @@ aside {
 }
 
 .form-description {
-  width: 100%;
+
 }
 
 .form {
-  width: 100%;
+
 }
+
+.form input {
+
+}
+
+/* Features */
 
 .features {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-flow: row wrap;
+}
+
+.features .content-wrapper {
+
+}
+
+.features h2 {
+  margin-bottom: 60px;
 }
 
 .features .features-items {
@@ -208,8 +251,13 @@ aside {
   flex-flow: row wrap;
 }
 
-article {
+.features article {
+  width: 55%;
+  margin: 30px 0;
+}
 
+.features p {
+  margin: 0;
 }
 
 .fontawesome-icon {
@@ -220,14 +268,29 @@ article {
 
 }
 
+/* Reviews */
+
 .reviews {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-flow: row wrap;
 }
 
-/****************** Mobile Styles - About *****************/
+.reviews .content-wrapper {
+
+}
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
+}
+
+
+/****************** Mobile Styles - About Page *****************/
 
 .mission {
   display: flex;
@@ -255,7 +318,11 @@ article {
 
 }
 
-/****************** Mobile Styles - FAQs *****************/
+.contact-content p {
+  margin: 0;
+}
+
+/****************** Mobile Styles - FAQ Page *****************/
 
 .faq {
   display: flex;
@@ -265,16 +332,22 @@ article {
 }
 
 .faq .content-wrapper {
+  margin: 50px 0 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
 
-.faq-content {
-
+.faq h2 {
+  margin-bottom: 40px;
+  width: 100%;
 }
 
+.faq-content {
+  margin-bottom: 50px;
+  width: 100%;
+}
 
 /* ==========================================================================
    Helper classes
