--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,57 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* General Styles */
+
+html {
+  font-size: 16px;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+  text-align: left;
+}
+
+ul,
+ol {
+  list-style-type: none;
+}
+
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
+}
+
+h3,
+h4 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.125em;
+  margin: 20px 0;
+}
+
+p {
+  font-size: 0.875em;
+  line-height: 1.285;
+}
+
+img {
+
+}
+
+figure {
+
+}
+
+address {
+  font-style: normal;
+}
+
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
@@ -135,7 +186,7 @@ header .content-wrapper {
 
 header nav {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
   width: 60%;
@@ -147,9 +198,6 @@ header nav ul {
   width: 100%;
 }
 
-header nav ul li {
-  list-style: none;
-}
 
 /* Footer Styles */
 
@@ -168,14 +216,6 @@ footer p {
 
 footer .contact {
   margin-bottom: 50px;
-  text-align: center;
-}
-
-footer .social {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
 }
 
 footer .social-icons {
@@ -192,7 +232,6 @@ footer .social-icons p {
 
 footer .copyright {
   margin: 20px 0;
-  text-align: center;
 }
 
 
@@ -341,12 +380,10 @@ aside {
 
 .faq h2 {
   margin-bottom: 40px;
-  width: 100%;
 }
 
 .faq-content {
   margin-bottom: 50px;
-  width: 100%;
 }
 
 /* ==========================================================================
