--- a/css/main.css
+++ b/css/main.css
@@ -141,11 +141,11 @@ p {
 }
 
 img {
-
+  width: 100%;
 }
 
 figure {
-
+  margin: 0;
 }
 
 address {
@@ -181,6 +181,14 @@ header .content-wrapper {
   flex-flow: row wrap;
   margin: 0;
   width: 100%;
+}
+
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .header-divider {
@@ -258,6 +266,9 @@ footer .copyright {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url('../img/hero-image.jpg') center no-repeat;
+  background-size: cover;
+  min-height: 500px;
 }
 
 .hero-area h1 {
@@ -309,10 +320,8 @@ input[type=button] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-}
-
-.features .content-wrapper {
-
+  background: url('../img/features-image.jpg') center no-repeat;
+  background-size: cover;
 }
 
 .features h2 {
@@ -351,10 +360,6 @@ input[type=button] {
   justify-content: center;
   flex-flow: row wrap;
   background-color: #2a423a;
-}
-
-.reviews .content-wrapper {
-
 }
 
 .reviews h2 {
@@ -531,10 +536,19 @@ input[type=button] {
     margin: 100px 0;
   }
 
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
   /* Header */
 
   header {
     justify-content: space-around;
+  }
+
+  header figure {
+    width: 30%;
   }
 
   header .content-wrapper {
@@ -556,6 +570,12 @@ input[type=button] {
 
   /* Hero Area */
 
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+  }
+
   /* Aside */
 
   aside .content-wrapper {
@@ -572,6 +592,10 @@ input[type=button] {
   }
 
   /* Features */
+
+  .features h2 {
+    margin: 0 20px 20px 0;
+  }
 
   .features article {
     display: flex;
@@ -592,8 +616,18 @@ input[type=button] {
     justify-content: space-between;
   }
 
+  .reviews h2 {
+    width: 90%;
+  }
+
+  .reviews article figure,
   .reviews article div {
     width: 49%;
+  }
+
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
   }
 
   /* Footer */
@@ -603,14 +637,24 @@ input[type=button] {
     margin: 100px 0;
   }
 
-  .footer-content {
+  footer .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
   }
 
   footer .contact {
     margin-bottom: 0;
+  }
+
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+    line-height: 1.285;
   }
 
   footer .copyright {
@@ -639,6 +683,10 @@ input[type=button] {
     align-items: flex-start;
   }
 
+  .contact-content h4 {
+    font-size: 1.5em;
+  }
+
   /* Tablet Styles - FAQ Page */
 
   .faq .content-wrapper {
@@ -653,6 +701,12 @@ input[type=button] {
     width: 100%;
   }
 
+  .faq h4,
+  .faq p {
+    font-size: 0.875em;
+    line-height: 1.125;
+  }
+
 
 }
 
@@ -663,10 +717,25 @@ input[type=button] {
     max-width: 960px;
   }
 
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3,
+  h4 {
+    font-size: 1.875em;
+  }
+
+  p {
+    font-size: 1.125em;
+    line-height: 1.333;
+  }
+
   /* Hero */
 
   .hero-area h1 {
     width: 60%;
+    font-size: 3.75em;
   }
 
   /* Aside */
@@ -680,6 +749,10 @@ input[type=button] {
     width: 30%;
   }
 
+
+  .form-description p {
+    font-size: 1.125em;
+  }
 
   /* Features */
 
@@ -703,20 +776,32 @@ input[type=button] {
     .mission h2,
     .contact-section .content-wrapper h2 {
       width: 100%;
+      font-size: 3em;
     }
 
     .contact-section .content-wrapper h2 {
       margin-bottom: 40px;
     }
 
+    .contact-content h4 {
+      font-size: 1.875em;
+    }
+
     /* Desktop styles - FAQ Page */
 
     .faq h2 {
       width: 100%;
+      font-size: 3em;
     }
 
     .faq-content {
       flex-basis: 35%;
+    }
+
+    .faq h4,
+    .faq p {
+      font-size: 1.125em;
+      line-height: 1;
     }
 
 }
