add features icons

--- a/css/main.css
+++ b/css/main.css
@@ -345,8 +345,9 @@ input[type=button] {
   text-align: center;
 }
 
-.fontawesome-icon {
-
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
 }
 
 .features-item-description {
