--- a/css/main.css
+++ b/css/main.css
@@ -284,6 +284,8 @@ footer .copyright {
 
 .hero-area h1 {
   font-size: 2.25em;
+  font-weight: 400;
+  margin: 0;
 }
 
 /* Aside */
@@ -296,18 +298,38 @@ aside {
   background-color: #527158;
 }
 
+aside .content-wrapper {
+  margin-top: 0;
+}
+
+aside .form-description h3 {
+  margin: 30px 0 10px 0;
+}
+
+aside .form-description p {
+  margin: 0;
+}
+
 aside .form {
   margin-top: 30px;
+}
+
+aside .form h3 {
+  margin-bottom: 15px;
 }
 
 input[type=text] {
   box-sizing: border-box;
   width: 100%;
-  color: #2a423a;
+  color: #9d9ea4;
   font-style: italic;
   background-color: #e1e2ea;
   border: none;
   padding: 20px 0;
+}
+
+input[value="email address"] {
+  padding-left: 15px;
 }
 
 input[type=button] {
@@ -445,11 +467,17 @@ input[type=button] {
 
 .faq-content {
   margin-bottom: 50px;
-}
-
-.faq-content {
   line-height: 1.333;
   font-weight: 700;
+}
+
+.faq-content h4 {
+  margin-top: 0;
+}
+
+.faq-content p {
+  font-weight: 400;
+  margin: 0;
 }
 
 /* ==========================================================================
@@ -697,7 +725,7 @@ input[type=button] {
   }
 
   .mission-content p {
-    width: 40%;
+    width: 45%;
   }
 
   .map figure {
@@ -725,7 +753,7 @@ input[type=button] {
   }
 
   .faq-content {
-    flex-basis: 40%;
+    flex-basis: 45%;
   }
 
   .faq h2 {
@@ -827,10 +855,6 @@ input[type=button] {
     .faq h2 {
       width: 100%;
       font-size: 3em;
-    }
-
-    .faq-content {
-      flex-basis: 35%;
     }
 
     .faq h4,
